--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 700px;
+    height: 900px;
     margin: 0;
 }
 
@@ -20,5 +20,14 @@ button {
 }
 
 .passo.ativo{
-    display:block;
+    display: block;
+}
+
+main {
+    text-align: center;
+    max-width: 90%;
+}
+
+img{
+    max-width: 70%;
 }
